WIP: add some meat to the bones

--- a/etc/jenkins2sql.conf
+++ b/etc/jenkins2sql.conf
@@ -1,12 +1,5 @@
 [default]
 log_file_name=etc/jenkins2sql.log
 log_level=10
-
-[jenkins]
-host=localhost
-port=8080
-user=admin
-password=admin
-job_names=test-job
-          test-job2
-          test-job3
+host=
+post=
