--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,5 @@ data_files =
 
 [entry_points]
 console_scripts =
-    jenkins2sql = jenkins2sql.main:main
+    jenkins2sql = jenkins2sql.api:main
 
