Rough draft but needs some more testing

--- a/etc/jenkins2sql.conf
+++ b/etc/jenkins2sql.conf
@@ -1,5 +1,6 @@
 [default]
-log_file_name=etc/jenkins2sql.log
-log_level=10
-host=
-post=
+db_uri = mysql+pymysql://citest:citest@127.0.0.1/citest
+log_file_name = etc/jenkins2sql.log
+log_level = 10
+host = localhost
+port = 7000
