Somewhat working implementation
still needs more work:
  * figure out the rest of the run_metadata options
    for openstack-health
  * add docs or script for easy openstack-health setup

--- a/etc/jenkins2sql.conf
+++ b/etc/jenkins2sql.conf
@@ -2,5 +2,5 @@
 db_uri = mysql+pymysql://citest:citest@127.0.0.1/citest
 log_file_name = etc/jenkins2sql.log
 log_level = 10
-host = localhost
+host = 127.0.0.1
 port = 7000
