mv tests dir and rename tox.ini refs

--- a/tox.ini
+++ b/tox.ini
@@ -22,11 +22,11 @@ whitelist_externals =
 [testenv:cover]
 setenv =
   {[testenv]setenv}
-  PYTHON=coverage run --source gate_observer --parallel-mode
+  PYTHON=coverage run --source jenkins2sql --parallel-mode
 commands =
   coverage erase
   find . -type f -name "*.pyc" -delete
-  stestr --test-path ./gate_observer/tests run {posargs}
+  stestr --test-path ./jenkins2sql/tests run {posargs}
   coverage combine
   coverage html -d cover
   coverage report
@@ -44,7 +44,7 @@ deps =
   {[testenv]deps}
   pylint==1.8.3
 commands =
-    pylint --rcfile={toxinidir}/pylintrc {toxinidir}/gate_observer
+    pylint --rcfile={toxinidir}/pylintrc {toxinidir}/jenkins2sql
 
 [flake8]
 # E125 continuation line does not distinguish itself from next logical line
