Add python3 support
This patch set adds python 3.5 and 3.6 support to the repository, as py27 is
scheduled to be EOL in 2020. This also updates Travis to perform CI
operations on py35 and py36.

Signed-off-by: Tin Lam <tin@irrational.io>

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py27,pep8,pylint
+envlist = py{27,35,36},pep8,pylint
 minversion = 1.6
 skipsdist = True
 
 [testenv]
+basepython = python3
 setenv = VIRTUAL_ENV={envdir}
          PYTHONWARNINGS=default::DeprecationWarning
 passenv = TRACE_FAILONLY GENERATE_HASHES http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
@@ -31,15 +32,28 @@ commands =
   coverage html -d cover
   coverage report
 
-[testenv:pep8]
+[testenv:py27]
 basepython = python2.7
+commands =
+  {[testenv]commands}
+
+[testenv:py35]
+basepython = python3.5
+commands =
+  {[testenv]commands}
+
+[testenv:py36]
+basepython = python3.6
+commands =
+  {[testenv]commands}
+
+[testenv:pep8]
 deps =
   {[testenv]deps}
 commands =
   flake8
 
 [testenv:pylint]
-basepython = python2.7
 deps =
   {[testenv]deps}
   pylint==1.8.3
