--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,9 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
 
 [files]
 packages =
@@ -25,4 +28,3 @@ data_files =
 [entry_points]
 console_scripts =
     jenkins2sql = jenkins2sql.api:main
-
